feat(links+footer): Created links and socials actions, updated footer
- Created get-links and get-socials actions
- Created all necessary loading.tsx files for mobile
- Created Logo.tsx Component
- Created Links and Socials Types
- A lot of UI and Styles fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -215,7 +215,7 @@ div[data-slot="tabs-content"] .expressive-code {
     font-size: 1rem;
     line-height: 1.25rem;
     position: absolute;
-    @apply text-primary -start-4 flex size-8 items-center justify-center rounded-full bg-white;
+    @apply border-primary text-foreground bg-background -start-4 flex size-8 items-center justify-center rounded-full border;
   }
 }
 
